[package]
name = "online-moments"
version = "0.1.0"
authors = ["J David Smith <emallson@atlanis.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.2.1"

[dev-dependencies]
quickcheck = "0.9.2"
statrs = "0.12.0"
rand = "0.7.3"
quickcheck_macros = "0.9.1"
